--- a/BigO/index.html
+++ b/BigO/index.html
@@ -154,7 +154,7 @@ for (j = 0; j &lt; n; j++) {
 <td valign=top>
 <b><a href=src/all_i_j_pairs.cpp>src/all_i_j_pairs.cpp</a></b>:<br>
 <pre>
-<font color=blue>/* This loop executes (n + 1) * n / 2 times.
+<font color=blue>/* This loop executes (n - 1) * n / 2 times.
    It arises when you enumerate all (i,j) pairs
    such at 0 <= i < j < n. */</font>
 
