--- a/Hashing/index.html
+++ b/Hashing/index.html
@@ -7,7 +7,7 @@
     <a href=http://web.eecs.utk.edu/~jplank/plank/classes/cs140/Notes/Hashing>
     <b>http://web.eecs.utk.edu/~jplank/plank/classes/cs140/Notes/Hashing</b></a>
 <LI> Last modification date: <i>
-Thu Sep 12 16:20:47 EDT 2019
+Mon Feb 10 14:38:35 EST 2020
 </i>
 <hr>
 
@@ -351,29 +351,61 @@ then construct <i>h</i> so that
 Let's walk through some examples:
 
 <pre>
-UNIX> <font color=darkred><b>acmhash</b></font>
+UNIX> <font color=darkred><b>bin/acmhash</b></font>
 <font color=darkred><b>a</b></font>
 1610612736
-<font color=darkred><b>aaaa</b></font>
-1616928864
-<font color=darkred><b>aaaaa</b></font>
-3848298592
+<font color=darkred><b>abca</b></font>
+1617125984
+<font color=darkred><b>abcaa</b></font>
+3848495712
 <font color=darkred><b>&lt;CNTL-D&gt;</b></font>
 UNIX> <font color=darkred><b></b></font>
 </pre>
 
-In the first example, we have:
+To help you with these examples, let me turn the permutation table in the code above to 
+one that is easier to navigate by hand.  It presents the table as 16 rows of 16 hex digits:
+
+<p><center><table border=3 cellpadding=3><td><pre>
+Permutation                   Second hex digit
+   Table
+                 0  1  2  3  4  5  6  7  8  9  a  b  c  d  e  f
+                -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 
+             0  01 57 31 0c b0 b2 66 a6 79 c1 06 54 f9 e6 2c a3
+             1  0e c5 d5 b5 a1 55 da 50 40 ef 18 e2 ec 8e 26 c8
+             2  6e b1 68 67 8d fd ff 32 4d 65 51 12 2d 60 1f de
+    First    3  19 6b be 46 56 ed f0 22 48 f2 14 d6 f4 e3 95 eb
+     hex     4  61 ea 39 16 3c fa 52 af d0 05 7f c7 6f 3e 87 f8
+    digit    5  ae a9 d3 3a 42 9a 6a c3 f5 ab 11 bb b6 b3 00 f3
+             6  84 38 94 4b 80 85 9e 64 82 7e 5b 0d 99 f6 d8 db
+             7  77 44 df 4e 53 58 c9 63 7a 0b 5c 20 88 72 34 0a
+             8  8a 1e 30 b7 9c 23 3d 1a 8f 4a fb 5e 81 a2 3f 98
+             9  aa 07 73 a7 f1 ce 03 96 37 3b 97 dc 5a 35 17 83
+             a  7d ad 0f ee 4f 5f 59 10 69 89 e1 e0 d9 a0 25 7b
+             b  76 49 02 9d 2e 74 09 91 86 e4 cf d4 ca d7 45 e5
+             c  1b bc 43 7c a8 fc 2a 04 1d 6c 15 f7 13 cd 27 cb
+             d  e9 28 ba 93 c6 c0 9b 21 a4 bf 62 cc a5 b4 75 4c
+             e  8c 24 d2 ac 29 36 9f 08 b9 e8 71 c4 e7 2f 92 78
+             f  33 41 1c 90 fe dd 5d bd c2 8b 70 2b 47 6d b8 d1
+&lt;/pre&gt;
+</pre></td></table></center><p>
+
+In the first example, recall that 'a' is 97, which is 0x61 in hex.  Let's use
+that fact to calculate <i>h<sub>0</sub></i> from the equation and table above:
 <p>
 <center>
 <table>
-<tr><td> <i>h<sub>0</sub></i></td><td>=</td><td><b>perm_table[h<sub>-4</sub></i>]</b> ^ 97</td></tr>
-<tr><td> </td><td>=</td><td><b>perm_table[0]</b> ^ 97</td></tr>
-<tr><td> </td><td>=</td><td>1 ^ 97</td></tr>
-<tr><td> </td><td>=</td><td>96</td></tr>
+<tr><td> <i>h<sub>0</sub></i></td><td>=</td><td><b>perm_table[h<sub>-4</sub></i>]</b> ^ 0x61</td></tr>
+<tr><td> </td><td>=</td><td><b>perm_table[0x00]</b> ^ 0x61</td></tr>
+<tr><td> </td><td>=</td><td>0x01 ^ 0x61</td></tr>
+<tr><td> </td><td>=</td><td>0x60</td></tr>
 </table>
 </center><p>
 
-96 is 0x60 in hexadecimal.  Therefore, <b>h</b> is equal to 0x60000000.  Check it out:
+Since the string is only one character long, 
+<i>h<sub>1</sub></i>,
+<i>h<sub>2</sub></i> and
+<i>h<sub>3</sub></i> are all equal to zero. 
+Therefore, <b>h</b> is equal to 0x60000000.  Check it out:
 
 <pre>
 UNIX> <font color=darkred><b>echo 1610612736 | awk '{ printf "0x%08x\n", $1 }'</b></font>
@@ -381,26 +413,48 @@ UNIX> <font color=darkred><b>echo 1610612736 | awk '{ printf "0x%08x\n", $1 }'</
 UNIX>
 </pre>
 
-When we try "aaaa", 
-<i>h<sub>0</sub></i> =
-<i>h<sub>1</sub></i> =
-<i>h<sub>2</sub></i> =
-<i>h<sub>3</sub></i> = 96.  Therefore <b>h</b> is equal to 0x60606060:
+When we try "abca", we have the following ('b' is 0x62 and 'c' is 0x63):
+<p>
+<center>
+<table>
+<tr><td> <i>h<sub>0</sub></i></td><td>=</td><td>0x60. <font color=blue> # From above.</td></tr></font>
+<tr><td> <i>h<sub>1</sub></i></td><td>=</td><td>0x63. <font color=blue> # This is equal to 0x01 ^ 0x62 = 0x63.</td></tr></font>
+<tr><td> <i>h<sub>2</sub></i></td><td>=</td><td>0x62. <font color=blue> # This is equal to 0x01 ^ 0x63 = 0x62.</td><tr></font>
+<tr><td> <i>h<sub>3</sub></i></td><td>=</td><td>0x60. <font color=blue> # It is calculated the same as <i>h<sub>0</sub></i></td></tr>
+</table>
+</center><p>
+
+Therefore, the hash value should be:
+<pre>
+    (h_0 = 0x60) << 24 |
+    (h_1 = 0x63) << 16 |
+    (h_2 = 0x62) <<  8 |
+    (h_3 = 0x60) <<  0 ) =  0x60636260
+</pre>
+
+Let's confirm:
 
 <pre>
-UNIX> <font color=darkred><b>echo 1616928864 | awk '{ printf "0x%08x\n", $1 }'</b></font>
-0x60606060
+UNIX> <font color=darkred><b>echo acba | bin/acmhash</b></font>
+1617060704
+UNIX> <font color=darkred><b>echo acba | bin/acmhash | awk '{ printf "0x%08x\n", $1 }'</b></font>
+0x60626360
 UNIX> <font color=darkred><b></b></font>
 </pre>
 
-And finally, when we do "aaaaa", we have
+And finally, when we do "abcaa", we know that 
+<i>h<sub>0</sub></i>,
+<i>h<sub>1</sub></i>,
+<i>h<sub>2</sub></i> and
+<i>h<sub>3</sub></i> are equal to 0x60, 0x63, 0x62 and 0x60 respectively.  Let's calculate
+<i>h<sub>4</sub></i> from 
+<i>h<sub>0</sub></i>, the character 'a' (which is 0x61), and the permutation table:
 
 <p>
 <center>
 <table>
-<tr><td> <i>h<sub>4</sub></i></td><td>=</td><td><b>perm_table[h<sub>0</sub></i>]</b> ^ 97</td></tr>
-<tr><td> </td><td>=</td><td><b>perm_table[96]</b> ^ 97</td></tr>
-<tr><td> </td><td>=</td><td>132 ^ 97</td></tr>
+<tr><td> <i>h<sub>4</sub></i></td><td>=</td><td><b>perm_table[h<sub>0</sub></i>]</b> ^ 0x61</td></tr>
+<tr><td> </td><td>=</td><td><b>perm_table[0x60]</b> ^ 0x61</td></tr>
 <tr><td> </td><td>=</td><td>0x84 ^ 0x61</td></tr>
 <tr><td> </td><td>=</td><td>(1000 0100) ^ (0110 0001)</td></tr>
 <tr><td> </td><td>=</td><td>(1110 0101)</td></tr>
@@ -408,18 +462,20 @@ And finally, when we do "aaaaa", we have
 </table>
 </center><p>
 
-Thus, <b>h</b> is equal to 0xe5606060:
+Thus, <b>h</b> is equal to 0xe5636260:
 
 <pre>
-UNIX> <font color=darkred><b>echo 3848298592 | awk '{ printf "0x%08x\n", $1 }'</b></font>
-0xe5606060
+UNIX> <font color=darkred><b>echo abcaa | bin/acmhash</b></font>
+3848495712
+UNIX> <font color=darkred><b>echo abcaa | bin/acmhash | awk '{ printf "0x%08x\n", $1 }'</b></font>
+0xe5636260
 UNIX> <font color=darkred><b></b></font>
 </pre>
 
 Yay!!
 <p>
-I know that was detailed and probably very difficult.  I'll make sure we go over it
-in class.
+I know that was detailed and probably difficult for you.  At this point, we'll go over
+<b><a href=handouts/in_class_1.html>handouts/in_class_1.html</a></b> in class.
 
 <h3>Evaluating how good those three hash functions are</h3>
 
@@ -837,58 +893,9 @@ You should be able to see pretty clearly that you can't delete entries simply wh
 are using open addressing.  We will not discuss that further in this class, but you should
 be aware of it.
 
-<h2>Cryptographic Hash Functions</h2>
-
-There are several well-known algorithms that compute hash functions
-of arbitrarily-sized data.  One example is the <a
-href=http://en.wikipedia.org/wiki/MD5>MD5</a> function that produces
-a 128-bit hash function from any sized data.  Another example is <a
-href=http://en.wikipedia.org/wiki/SHA-1>SHA-1</a>, which produces a
-160-bit hash.  Both functions attempt to generate uniformly
-distributed hashes from arbitrary data that are secure, in that you
-can't get any information about the data from the hash.  I won't go 
-into a discussion beyond that, except that SHA-1 does a better job,
-but is more computationally expensive.  For our purposes, we will assume that
-the functions produce hashes from data that look like random streams
-of bits.
-<p>
-The <b>openssl</b> command generates hashes from files using either
-technique.  For example:
-
-<pre>
-UNIX> <font color=darkred><b>cat files/input-1.txt</b></font>
-Rosalita, jump a little lighter.
-Senorita come sit by my fire.
-UNIX> <font color=darkred><b>cat files/input-2.txt</b></font>
-Sosalita, jump a little lighter.
-Senorita come sit by my fire.
-UNIX> <font color=darkred><b>openssl md5 files/input-1.txt files/input-2.txt</b></font>
-MD5(files/input-1.txt)= b9937df3fefbe66d8fcdda363730bf14
-MD5(files/input-2.txt)= 3a752ef1b9bfd1db6ba6a701b6772065
-UNIX> <font color=darkred><b>openssl sha1 files/input-1.txt files/input-2.txt</b></font>
-SHA1(files/input-1.txt)= 9a2c3d93445fa844094eb213a17fc5996895c925
-SHA1(files/input-2.txt)= 8886b6ef4671093b15c2dba387c3eb169e9db5d2
-UNIX> <font color=darkred><b></b></font>
-</pre>
-
-The representation of the hashes is a long stream of hexadecimal.  You can 
-read each hex digit as four bits.  Thus the first eight bits of b9937df3fefbe66d8fcdda363730bf14
-are 10111001 (b9).  The hexadecimal string is 32 characters long -- hence the hash is 128 bits.
-<p>
-The ASCII value of 'R' is 82 (binary 1010010) and the value of 'S' is 83 (binary 1010011).
-That means that <b>files/input-1.txt</b> and <b>files/input-2.txt</b> differ by exactly one bit.
-However, look how different the hashes of both values are.  That's a great thing about
-both functions. (Look up <a href=http://en.wikipedia.org/wiki/Avalanche_effect>avalanche
-effect</a> if you want to learn more about that property).
-<p>
-Hashes like MD5 and SHA-1 are often used to represent large files.  For example, 
-suppose I have a photo in my library that is 4 MB long, and has an MD5 hash of
-6282f7860277242c80b69d3a20e0b40e.  Suppose I have burned a CD that should have the photo on
-it and I want to make sure that the CD is not corrupted.  I can calculate the hash
-of the photo on the CD, and if it doesn't equal 6282f7860277242c80b69d3a20e0b40e, then
-I know it's corrupted.  If it does equal 6282f7860277242c80b69d3a20e0b40e, I can assume
-with probability 1/2<sup>128</sup> that it is not corrupted.
-<p>
+<hr>
+At this point, we'll go over
+<b><a href=handouts/in_class_2.html>handouts/in_class_2.html</a></b> in class.
 
 <hr>
 <h2>Load Factors, Collision Resolution and Performance</h2>
@@ -1021,24 +1028,68 @@ resolution techniques fare:
 As you can see, the graph lines are not smooth, but that is because this is just
 one set of examples, and the exact number of probes can depend on the luck of the draw.  We
 could smooth this by running lots of different examples, but I'm not going to do that.
-Were I to write a paper on this, I'd have to do that so that my graphs are more
-cogent.
+(Were I to write a paper on this, I'd have to do that so that my graphs are more
+cogent.)  However, I think that the graph pretty clearly allows you to draw the conclusion
+that Quadratic Probing is superior to Linear Probing on this data.
 
 <hr>
-<h2>One way that I use hashes</h2>
+<h2>Cryptographic Hash Functions, and One Way That I Use Hashes</h2>
 
+There are several well-known algorithms that compute hash functions
+of arbitrarily-sized data.  One example is the <a
+href=http://en.wikipedia.org/wiki/MD5>MD5</a> function that produces
+a 128-bit hash function from any sized data.  Another example is <a
+href=http://en.wikipedia.org/wiki/SHA-1>SHA-1</a>, which produces a
+160-bit hash.  Both functions attempt to generate uniformly
+distributed hashes from arbitrary data that are secure, in that you
+can't get any information about the data from the hash.  I won't go 
+into a discussion beyond that, except that SHA-1 does a better job,
+but is more computationally expensive.  For our purposes, we will assume that
+the functions produce hashes from data that look like random streams
+of bits.
+<p>
+The <b>openssl</b> command generates hashes from files using either
+technique.  For example:
+
+<pre>
+UNIX> <font color=darkred><b>cat files/input-1.txt</b></font>
+Rosalita, jump a little lighter.
+Senorita come sit by my fire.
+UNIX> <font color=darkred><b>cat files/input-2.txt</b></font>
+Sosalita, jump a little lighter.
+Senorita come sit by my fire.
+UNIX> <font color=darkred><b>openssl md5 files/input-1.txt files/input-2.txt</b></font>
+MD5(files/input-1.txt)= b9937df3fefbe66d8fcdda363730bf14
+MD5(files/input-2.txt)= 3a752ef1b9bfd1db6ba6a701b6772065
+UNIX> <font color=darkred><b>openssl sha1 files/input-1.txt files/input-2.txt</b></font>
+SHA1(files/input-1.txt)= 9a2c3d93445fa844094eb213a17fc5996895c925
+SHA1(files/input-2.txt)= 8886b6ef4671093b15c2dba387c3eb169e9db5d2
+UNIX> <font color=darkred><b></b></font>
+</pre>
+
+The representation of the hashes is a long stream of hexadecimal.  You can 
+read each hex digit as four bits.  Thus the first eight bits of b9937df3fefbe66d8fcdda363730bf14
+are 10111001 (b9).  The hexadecimal string is 32 characters long -- hence the hash is 128 bits.
+<p>
+The ASCII value of 'R' is 82 (binary 1010010) and the value of 'S' is 83 (binary 1010011).
+That means that <b>files/input-1.txt</b> and <b>files/input-2.txt</b> differ by exactly one bit.
+However, look how different the hashes of both values are.  That's a great thing about
+both functions. (Look up <a href=http://en.wikipedia.org/wiki/Avalanche_effect>avalanche
+effect</a> if you want to learn more about that property).
+<p>
+Hashes like MD5 and SHA-1 are often used to represent large files. Here's an example:
 I use MD5 hashes to help me manage pictures.  In particular, I've made a bunch of 
 "photoframes" for my family.  What I do is find a used computer display on Craig's list,
-typically for $10-$20.  Then I buy a Raspberry Pi (all of the components there are around
+typically for $10-$20.  Then I buy a Raspberry Pi (all of the components required are around
 $60-$70 -- it would be cheaper if I bought a Pi 0, but I haven't done that yet).  And
 then I use <b>git</b> and the program <b>feh</b> to set it up so that I can simply upload
 photos to my git repo when I want to add them to the photoframe.  The Pi's pull the repo
 every ten minutes, and then if something has been updated, they do some organization, and
-relauch <b>feh</b> with the new photos.
+relaunch <b>feh</b> with the new photos.
 
 <p>To detect which photos have changed from one iteration to another, I use MD5 hashes of the
-photos' contents.  That's a lot faster than trying to do anything with the photos' contents,
-since each photo is typically between 2 and 15 megabytes.
+photos' contents.  This makes my life fast, because I represent each photo, which is 
+typically between 2 and 15 megabytes, with a single 128-bit string.
 
 <p>In addition to 
 <b><a href=files/Pictures-SHA1.txt>files/Pictures-SHA1.txt</a></b>, I have made the 
