--- a/Sudoku/index.html
+++ b/Sudoku/index.html
@@ -9,6 +9,8 @@
 <LI> Original notes: Fall, 2006
 <LI> Last modified: <i> 
 Wed Oct 30 01:25:04 EDT 2019
+<LI> <i>Note: Sudoku_draw is there so I can convert any sudoku file, even
+     ones with whitespace and duplicates, to jpg.</i>
 </i>
 <hr>
 One great use of recursion is to solve problems using exhaustive search 
